# mor_fcm

./: CHANGELOG.md  README.md  README_SPEED.md  bench_infer.py  mor_demo.py  pyproject.toml  requirements.txt  setup.cfg  speed_decode.py
.github/workflows/: ci.yml
mixture_of_recursions/: __init__.py  batching.py  config.py  data.py  inference.py  model.py  train.py
mixture_of_recursions/modules/: attention.py  embeddings.py  feedforward.py  transformer_block.py
mixture_of_recursions/recursion/: kv_cache.py  recursion_block.py  routers.py  routing_utils.py
mor_speed_adapter/: __init__.py  adapter.py  batching.py  config.py  hf_patch.py  kv_cache.py  metrics.py  router.py  utils.py
notebooks/: mor_quickstart.ipynb
scripts/: plot_depth_hist.py
tests/: test_bench_infer.py  test_cli_smoke.py  test_config.py  test_depth_hist.py  test_depthwise_batching.py  test_end2end.py  test_hf_patch_generic.py  test_identity_no_skip.py  test_kv_cache.py  test_recursion.py  test_router_entropy.py  test_router_shapes.py  test_routing.py  test_sharing.py
