[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixture_of_recursions"
version = "0.1.0"
description = "Reference implementation of Mixture-of-Recursions (MoR) for language modelling"
authors = [{name = "OpenAI Assistant"}]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2",
    "numpy",
    "tqdm",
    "datasets>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
