[metadata]
name = mixture_of_recursions
version = 0.1.0
description = Reference implementation of Mixture-of-Recursions (MoR)

[options]
packages = find:
install_requires =
    torch>=2.2
    numpy
    tqdm
    datasets>=2.10
python_requires = >=3.9

[options.extras_require]
dev =
    pytest
    matplotlib
    ruff

[tool:pytest]
addopts = -q
